Fixed alignment of 'Round Software' cover's title in size-constrained layouts.

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -209,9 +209,9 @@
 
 @media only screen and (max-width: 900px) {
   .cover-title {
-    font-size: 3em;
- 	 line-height: 1em;
- 	 font-weight: bold;
+    font-size: 2.9em;
+ 	  line-height: 1em;
+ 	  font-weight: bold;
     text-align: center;
   }
 
